--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ h10{color: #484535;position: absolute;z-index: 3; font-weight: 800;}
 		<img src="main.png">
 		</center>
 	</div>
-	<a href="https://seoojing.github.io/602/">
+		<a href="https://seoojing.github.io/602/">
 	<div id="turn">
 		<img src="turn.png">
 	</div>
@@ -256,11 +256,11 @@ h10{color: #484535;position: absolute;z-index: 3; font-weight: 800;}
 	<div id="bx">
 		<img src="boox.png">
 	</div>
-
+<a href="https://seoojing.github.io/nunu/">
 	<div id="lefts">
 		<img src="here.png">
 	</div>
-
+		</a>
 
 	<div id="rights">
 		<img src="orhere.png">
