--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ h10{color: #484535;position: absolute;z-index: 3; font-weight: 800;}
 	<div id="orange8">
 	<img src="okk.png">
 	</div>
-<a href="https://seoojing.github.io/616/">
+<a href="https://seoojing.github.io/yun/">
 	<div id="orange5">
 	<img src="okk.png">
 	</div>
