--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ h10{color: #484535;position: absolute;z-index: 3; font-weight: 800;}
 	 	<h4 id="poom5">...조금 호러틱해 보인다.</h4>
 	 	<h2 id="poom6">여어~ 너도 앨리트네~? 이렇게 일찍오고~</h2>
 		<h1 id="poom7">아직 교수님 안오셨어! 좀있으면 오신대. 그때까진 기.다.려</h1>
-		<h1 id="poom8">뭐..내가 일등인것 같지만! 넌 나랑 희선이 다음이야! 하하!</h1>
+		<h1 id="poom8">희선이랑 나밖에 안와있었어. 넌 세번째야! 일등은 나고! 하하!</h1>
 		<h4 id="yuk">오동통한 다육이가 있다.</h4>
 		<h3 id="yuk2">누가 방금 뿌렸는지 전체적으로 물기가 촉촉하다.</h3>
 		<h6 id="yuk3">오동통한 잎이다. 왼쪽의 다육이에서 떨어진 모양이다. </h6>
